--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
     <h1>이예린♥김학규</h1>
   <img src="https://scontent-icn1-1.xx.fbcdn.net/v/t1.0-1/p240x240/20229091_2339046756320470_6055549771695702741_n.jpg?oh=3f83560ea086f0eb6466f0a922c7445c&oe=5A2F4710">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyLqUkEnz8IJRzWLEZVkdlDuy_hznSGs6vemDV5PPdbddlh7VmRu00ufY">
+    <img src="https://www.facebook.com/photo.php?fbid=2349973345227811&set=a.1812817245610093.1073741829.100006455059598&type=3">
   </body>
 </html>
